src/app/globals.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

body {
  color: rgb(var(--foreground-rgb));
  /* background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb)); */
  /* background-color: #FFFFFF; */
}

/* ---mar-14---- */

.text-black-600 {
  color: #1B1B1B;
}

.text-light-gray {
  color: #EDEDED;
}

.border-grey {
  border-color: #EDEDED;
}

.bg-grey{
  background-color: #EDEDED;
}

.text-primary {
  color: #2FACD6;
}

.bg-primary {
  background-color: #2FACD6;
}

.bg-black-700 {
  background-color: #161616;
}
.text-black-200{
  color: #222222;
}

.text-gray-500{
  color: #585858;
}
.bg-dark-grey{
  background-color: #4E4D4D;
}

.dark .text-black-200{
  color: #FFFFFF;
}

.dark .text-black{
  color: #FFFFFF;
}

.dark .bg-grey{
  background-color: #393939;
}

.dark .border-grey{
  border-color: #393939;
}

.dark  .text-black-600{
  color: #FFFFFF;
}
.h-banner{
  width: 100% !important;
  height: 309px !important;
}
.h-image{
  width: 100% !important;
  height: 152px !important;
}
.h-postimg{
  width: 100% !important;
  height: 644px !important;
}
.h-postim{
  width: 100% !important;
  height: 152px !important;
}
.h-channel{
  width: 100% !important;
  height: 152px !important;
}
.desc p,.desc h1,.desc h2,.desc h3,.desc h5,.desc h6,.desc span{
  color: #212529 !important;
  font-weight: 300 !important;
  font-size: 1.125rem !important;
  line-height: 1.75rem !important;
  background-color: transparent !important;
  font-family: Roboto, sans-serif !important;
  margin: 0 !important;
}

.dark .desc p,.dark .desc h1,.dark .desc h2,.dark .desc h3,.dark .desc h5,.dark .desc h6,.dark .desc span{
  color: rgb(156 163 175) !important;
  background-color: #121212!important;
}
@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}
/* .h-channel {
  width: 100% !important;
  height: 201px !important;
} */

